# HuaShengAI

./: .gitignore  README.md  build_exe.bat  package.sh  pyinstaller.spec  pyproject.toml  run.bat  run.sh
.github/workflows/: build-windows-exe.yml
app/: __init__.py  accounts.py  autovideo.py  bridge.py  config.py  database.py  huasheng.py  logging_utils.py  main.py  microheadline.py  models.py  project_cli.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  desktop.js  style.css
frontend/src/components/: ArticleLibrarySection.vue  ArticleMonitoringSection.vue  BenchmarkAccountsSection.vue  MicroheadlineSettingsPanel.vue
scripts/: build_frontend.sh  pyinstaller_runtime_playwright.py
tests/: test_accounts.py  test_autovideo.py  test_bridge.py  test_huasheng.py  test_microheadline.py  test_project_cli.py
